[package]
name = "dice_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#actix-web="4"
hyper = {version="0.14.*",features=["server","http1","http2","tcp"]}
serde = "1.0.136"
serde_derive = "1.0.136"
sled = "0.34.7"
serde_json = "1.0.79"
anyhow = "1.0.56"
bcrypt = "0.12.1"
rand = "0.8.5"
err_tools = "0.1.1"
env_logger = "0.9.0"
tokio = {version="1.17.0",features=["full"]}
serde_urlencoded = "0.7.1"
